cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_346.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/rand/drbg_lib.c:316: error: DEAD_STORE
  The value written to &ret (type int) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/rand/drbg_lib.c:316:5: Write of unused value
314.   int RAND_DRBG_set(RAND_DRBG *drbg, int type, unsigned int flags)
315.   {
316.       int ret = 1;
           ^
317.   
318.       if (type == 0 && flags == 0) {
